# dotenv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
dotenv/: Cargo.toml
dotenv/examples/: simple.rs
dotenv/src/: errors.rs  iter.rs  lib.rs  parse.rs
dotenv/tests/: test-child-dir.rs  test-default-location.rs  test-dotenv-iter.rs  test-from-filename-iter.rs  test-from-filename.rs  test-from-path-iter.rs  test-from-path.rs  test-variable-substitution.rs
dotenv_codegen/: Cargo.toml
dotenv_codegen/src/: lib.rs
dotenv_codegen/tests/: basic_dotenv_macro.rs
dotenv_codegen/tests/ui/: dotenv_no_args.rs  dotenv_no_args.stderr  dotenv_or_default_no_args.rs  dotenv_or_default_no_args.stderr  dotenv_or_default_three_args.rs  dotenv_or_default_three_args.stderr  dotenv_three_args.rs  dotenv_three_args.stderr
dotenv_codegen_impl/: Cargo.toml
dotenv_codegen_implementation/: Cargo.toml
dotenv_codegen_implementation/src/: lib.rs
dotenvx/: Cargo.toml
dotenvx/examples/: simple.rs
dotenvx/src/: errors.rs  lib.rs
dotenvx/tests/: test-child-dir.rs  test-default-location.rs  test-dotenv-iter.rs  test-from-filename-iter.rs  test-from-filename.rs  test-from-path-iter.rs  test-from-path.rs  test-var.rs  test-variable-substitution.rs  test-vars.rs
dotenvx_codegen/: Cargo.toml
dotenvx_codegen/src/: lib.rs
dotenvx_codegen/tests/: basic_dotenv_macro.rs
dotenvx_codegen_implementation/: Cargo.toml
dotenvx_codegen_implementation/src/: lib.rs
