[package]
name = "dotenvx"
version = "0.0.1"
authors = ["Kazuno Fukuda <codemountains@gmail.com>"]
description = "A `dotenv` implementation for Rust"
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/codemountains/dotenvx"
repository = "https://github.com/codemountains/dotenvx"
edition = "2018"

[[bin]]
name = "dotenvx"
required-features = ["cli"]

[dependencies]
clap = { version = "4.4.6", optional = true }

[dev-dependencies]
tempfile = "3.0.0"

[features]
cli = ["clap"]
