[package]
name = "dotenvx_codegen"
version = "0.0.2"
authors = ["Kazuno Fukuda <codemountains@gmail.com>"]
description = "A `dotenv` implementation for Rust"
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/codemountains/dotenvx"
repository = "https://github.com/codemountains/dotenvx"
edition = "2018"

[dependencies]
dotenvx_codegen_implementation = { version = "0.0.1", path = "../dotenvx_codegen_implementation" }
proc-macro-hack = "0.5"
